apps/shop/email/k8s/overlays/prod/destrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: shop-email-prod
spec:
  host: shop-email.shop-email.svc.cluster.local
  subsets:
  - name: shop-email-prod
    labels:
      app: shop-email
      env: prod
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
  - name: shop-email-prod-p1a
    labels:
      app: shop-email
      env: prod
      deploy.cloud.google.com/target-id: p1a
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
