apps/shop/email/k8s/overlays/prod/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: shop-email-prod
spec:
  hosts:
  - shop-email
  http:
  - match:
    - sourceLabels:
        app: shop-email
        env: prod
    route:
    - destination:
        host: shop-email
        subset: shop-email-prod
